docs/errors/examples/array-index-out-of-range/array-index-out-of-range.grob
// E5101 — reading an array index past the end of the array
const names := ["ada", "grace", "katherine"]

print(names[5])
